--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,10 +5,17 @@
     height: 80px;
     overflow: hidden;
 }
+.Header .logo{
+    display: flex;
+}
+.Header .logo h2{
+    font-size: 30px;
+}
 .Header .logo img{
     width: 70px;
     padding: 10px;
 }
+
 .Header .menus ul{
     display: flex;
     list-style: none;
@@ -16,4 +23,9 @@
 .Header .menus ul li{
     margin-right: 20px;
     font-size: 20px;
+}
+
+.Header .menus ul li a{
+    text-decoration: none;
+    color: aliceblue;
 }
