--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,6 +7,11 @@
     background: linear-gradient(45deg, #ff006a, #e90000);
 }
 
+.Home-head img{
+    width: 100%;
+    height: 200px;
+}
+
 .Home-quiz{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
